<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/title">

    <include
        android:id="@+id/custom_user_defined_title"
        layout="@layout/view_title"></include>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/custom_user_defined_viewpager"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/define_activity_week"
            android:textColor="@color/title_red"
            style="@style/define_chooseBar_tv_style"
            android:text="@string/week"/>

        <TextView
            android:id="@+id/define_activity_day"
            style="@style/define_chooseBar_tv_style"
            android:text="@string/day"/>

        <TextView
            android:id="@+id/define_activity_month"
            style="@style/define_chooseBar_tv_style"
            android:text="@string/month"/>

        <TextView
            android:id="@+id/define_activity_specialday"
            style="@style/define_chooseBar_tv_style"
            android:text="@string/specialDay"/>


    </LinearLayout>

</RelativeLayout>
